--- a/Raspberry Pi Side/Raspberry Pi Side.cbp
+++ b/Raspberry Pi Side/Raspberry Pi Side.cbp
@@ -14,6 +14,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="TeamCode" />
+					<Add directory="TeamCode/OpModeClasses" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -24,6 +25,7 @@
 				<Compiler>
 					<Add option="-O2" />
 					<Add directory="TeamCode" />
+					<Add directory="TeamCode/OpModeClasses" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -36,6 +38,8 @@
 		</Compiler>
 		<Unit filename="TeamCode/OpMode.cpp" />
 		<Unit filename="TeamCode/OpMode.h" />
+		<Unit filename="TeamCode/OpModeClasses/Telemetry.cpp" />
+		<Unit filename="TeamCode/OpModeClasses/Telemetry.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
